implemented enum class Extension and improved converter class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,11 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Add the executable and include all necessary source files
 add_executable(FileConverter 
-    main.cpp 
+    main.cpp
+    mesh.cpp
     converter.cpp 
-    stepConverter.cpp 
     stepReader.cpp 
     stepWriter.cpp 
-    stlConverter.cpp 
     stlReader.cpp 
     stlWriter.cpp
 )
