Bugfixing in stl section, function implementation on step section.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,8 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "cinttypes": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "codecvt": "cpp",
+    "ratio": "cpp"
   }
 }
